lecture3/apache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache-app
  template:
    metadata:
      labels:
        app: apache-app
    spec:
      containers:
        - name: apache-app
          image: httpd:2.4
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: apache-app
  ports:
    - protocol: TCP
      port: 80 # this is the port on the pod exposed to external clients or pods
      targetPort: 80 # this is the port of the container within the pod, where apache runs on
