lecture3/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassname: nginx
  rules:
    - host: victorimmanuel.me
      http:
        paths:
          - path: /nginx
            pathType: prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /apache
            pathType: prefix
            backend:
              service:
                name: apache-service
                port:
                  number: 80
